Expand resources feature

--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -1,5 +1,7 @@
 {
   "@@locale": "en_US",
+  "appName": "Tractian",
   "errorMessage": "An error occurred while loading the page.\n Please try again.",
-  "errorTryAgainButton": "Try Again"
+  "errorTryAgainButton": "Try Again",
+  "assetsPageTitle": "Assets"
 }
