feature to apply filters

--- a/lib/l10n/intl_en_US.arb
+++ b/lib/l10n/intl_en_US.arb
@@ -4,5 +4,7 @@
   "errorMessage": "An error occurred while loading the page.\n Please try again.",
   "errorTryAgainButton": "Try Again",
   "assetsPageTitle": "Assets",
-  "textFieldHint": "Busque ativo ou local"
+  "textFieldHint": "Busque ativo ou local",
+  "energyFilter": "Sensor de Energia",
+  "criticalFilter": "Crítico"
 }
